--- a/style/styleEvent.css
+++ b/style/styleEvent.css
@@ -513,7 +513,7 @@ header {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(material/resize/entry.jpg);
+  background: url(material/resize/lclclc.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 15%;
@@ -839,23 +839,29 @@ header {
 }
 
 .btn {
-  background-color: gainsboro;
-  border: 1px solid #c8c8c8;
+  text-align: center;
+  display: block;
+  margin: auto;
+  letter-spacing: 1px;
+  background-color: #9e1527;
+  color: gainsboro;
   border-radius: 10px;
-  color: #9e1527;
   padding: 10px 20px;
-}
-
-.btn__download {
-  margin: 5rem 0rem 0rem;
   font-weight: 600;
   -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
           box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  border-radius: 10px;
+}
+
+.btn__download {
+  border: none;
+  margin: 5rem 0rem 0rem;
+  font-weight: 600;
 }
 
 .btn__download:hover {
-  background-color: #c8c8c8;
-  color: #b5172c;
+  background: gainsboro;
+  color: #9e1527;
 }
 
 .btn__download:active {
@@ -1365,24 +1371,13 @@ header {
 
 .subscribe__right .subscribe__btn {
   width: 130px;
-  text-align: center;
-  display: block;
-  margin: auto;
-  letter-spacing: 1px;
-  background-color: #9e1527;
-  color: gainsboro;
-  border-radius: 10px;
-  padding: 15px 0;
-  font-weight: 600;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 
 .subscribe__right .subscribe__btn:hover {
   background: gainsboro;
   border: 1px solid #9e1527;
   color: #9e1527;
-  padding: 14px 0;
+  padding: 9px 0;
 }
 
 .subscribe__right .subscribe__btn:active {
@@ -1478,6 +1473,12 @@ header {
 }
 
 @media screen and (max-width: 990px) {
+  .header {
+    background: url(material/resize/lclclc.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow-x: hidden;
+  }
   @-webkit-keyframes cloud {
     0% {
       opacity: 0;
@@ -1617,15 +1618,6 @@ header {
 }
 
 @media screen and (max-width: 500px) {
-  .header {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    background: url(material/resize/entry.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    overflow-x: hidden;
-  }
   .operation__field .operation__meal {
     max-width: 250px;
     height: auto;
@@ -1828,196 +1820,170 @@ html {
   overflow-x: hidden;
 }
 
-.subscribe {
-  background: url(../material/resize/subbanner.jpg);
-  background-position: center;
+.event {
+  background: url(https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1545851756186-Z4DQHO96KWOUIJVNT66C/47578325_369323780506176_1010760784348708864_n.jpg?format=2500w);
+  background-position: 50% 6%;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   min-height: 100vh;
 }
 
-.subscribe__container {
+.event__header {
+  text-align: center;
+  font-size: 2rem;
+  color: #c8c8c8;
+  font-weight: 600;
+  text-shadow: black 1px 1px 0, black -1px -1px 0;
+  padding: 3rem 0;
+}
+
+.event__container {
   background: #304352;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(40%, #d7d2ccdd), to(#9e1527));
   background: linear-gradient(to bottom, #d7d2ccdd 40%, #9e1527);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 1000px;
-  margin: auto;
-  gap: 2rem;
   border-radius: 10px;
-}
-
-.subscribe__container .subscribe__left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
-}
-
-.subscribe__container .subscribe__left img {
-  max-width: 100%;
   margin: auto;
+  padding: 1.5rem;
+  width: 95%;
+  max-width: 1010px;
+  display: -ms-grid;
+  display: grid;
+  row-gap: 1rem;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+  -ms-grid-columns: 340px 340px 250px;
+      grid-template-columns: 340px 340px 250px;
+  -ms-grid-rows: 400px 300px;
+      grid-template-rows: 400px 300px;
+      grid-template-areas: '300 dead joker' 'it   it  joker';
 }
 
-.subscribe__container .subscribe__right {
-  -ms-flex-preferred-size: 60%;
-      flex-basis: 60%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 3rem 1rem;
-}
-
-.subscribe__container .subscribe__right form {
-  width: 50%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 2rem;
-}
-
-.subscribe__container .subscribe__right form > * {
-  margin: 1rem;
-}
-
-.subscribe__container .subscribe__right form input {
-  width: 100%;
-  height: 30px;
-  font-weight: 600;
-  border: 1px solid black;
-  border-radius: 3px;
-  font-family: inherit;
-  background-color: transparent;
-}
-
-.subscribe__container .subscribe__right form button {
-  width: 50%;
-  display: block;
-  margin: 1rem auto 0;
-  letter-spacing: 1px;
-  background-color: #9e1527;
-  color: gainsboro;
-  border-radius: 10px;
-  border: 2px solid white;
-  padding: 13px 0;
-  font-weight: 600;
-}
-
-.subscribe__container .subscribe__right form button:hover {
-  background: gainsboro;
-  color: #9e1527;
-  border: 2px solid #b5172c;
-}
-
-.subscribe__container .subscribe__right form button:active {
-  -webkit-transform: scale(0.98);
-          transform: scale(0.98);
-}
-
-.subscribe__container .sub__header {
-  margin-bottom: 1.5rem;
-}
-
-.subscribe__container .sub__content {
+.event__container .event__date {
+  position: absolute;
+  top: 0;
+  left: 1rem;
   text-align: center;
-  margin-bottom: 2rem;
+  background: #b5172c;
+  padding: 0.5rem;
+  color: gainsboro;
+  text-shadow: black 1px 1px 0, black -1px -1px 0;
 }
 
-@media screen and (max-width: 1024px) {
-  .subscribe__container {
-    margin: 0rem auto 1rem;
-    width: 70%;
-    height: 80vh;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+.event__container .event__name {
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  color: gainsboro;
+  text-shadow: black 1px 1px 0, black -1px -1px 0;
+  font-size: 20px;
+  font-weight: 600;
+  overflow: hidden;
+}
+
+.event__container .film {
+  position: relative;
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.event__container > :first-child {
+  background-image: url(../material/resize/300.jpg);
+      grid-template-areas: 300;
+}
+
+.event__container > :nth-child(2) {
+  background-image: url(../material/resize/deadpool.jpg);
+      grid-template-areas: dead;
+}
+
+.event__container > :nth-child(3) {
+  background-image: url(../material/resize/joker.jpg);
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 3;
+  grid-area: joker;
+}
+
+.event__container > :last-child {
+  background-image: url(http://hautecultureuk.com/wp-content/uploads/2017/09/it-2017-movie-poster.jpg);
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: it;
+}
+
+.event__container > :last-child img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media screen and (max-width: 1078px) {
+  .event__container {
+    row-gap: 1.5rem;
+    -webkit-column-gap: 1.5rem;
+            column-gap: 1.5rem;
+    max-width: 800px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: ()[2fr];
+        grid-template-columns: repeat(2fr);
+    -ms-grid-rows: ()[2fr];
+        grid-template-rows: repeat(2fr);
+        grid-template-areas: '300 dead' 'it  joker';
   }
-  .subscribe__container .subscribe__left {
-    -ms-flex-preferred-size: 30%;
-        flex-basis: 30%;
-    padding: 0rem 1rem;
+  .film:last-child {
+    background-image: url(https://www.indiewire.com/wp-content/uploads/2017/08/it.jpg?w=640);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
   }
-  .subscribe__container .subscribe__left img {
-    width: 180px;
-  }
-  .subscribe__container .subscribe__right {
-    -ms-flex-preferred-size: 70%;
-        flex-basis: 70%;
-    padding: 0rem 0.5rem;
-  }
-  .subscribe__container .subscribe__right .sub__header {
-    text-align: center;
-    font-size: 26px;
-  }
-  .subscribe__container .subscribe__right .sub__content {
-    font-size: 16px;
-    margin-bottom: 0.5rem;
-    text-align: center;
+  .film:nth-child(3) {
+    background-image: url(https://www.indiewire.com/wp-content/uploads/2019/09/joker-1.jpg);
+    background-position: 35% 50%;
   }
 }
 
-@media screen and (max-width: 768px) {
-  .subscribe__container .subscribe__right .sub__header {
-    font-size: 24px;
+@media screen and (max-width: 800px) {
+  .event {
+    background: url(https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1545851756186-Z4DQHO96KWOUIJVNT66C/47578325_369323780506176_1010760784348708864_n.jpg?format=2500w);
+    background-position: 50% 6%;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
-  .subscribe__container .subscribe__right .sub__content {
-    font-size: 16px;
-  }
-}
-
-@media screen and (max-width: 630px) {
-  .subscribe__container {
-    margin: 0rem auto;
-    width: 80%;
-  }
-  .subscribe__container .subscribe__right {
-    -ms-flex-preferred-size: 70%;
-        flex-basis: 70%;
-    padding: 0rem 1rem;
-  }
-  .subscribe__container .subscribe__right .sub__header {
-    font-size: 18px;
-  }
-  .subscribe__container .subscribe__right .sub__content {
-    margin-bottom: 1rem;
-    font-size: 13px;
-  }
-  .subscribe__container .subscribe__right form {
-    width: 70%;
-    margin: 0rem 0 1rem;
+  .event__container {
+    -ms-grid-columns: 300px 300px;
+        grid-template-columns: 300px 300px;
+    -ms-grid-rows: 300px 300px;
+        grid-template-rows: 300px 300px;
+        grid-template-areas: '300 dead' 'it joker';
   }
 }
 
-@media screen and (max-width: 400px) {
-  .subscribe__container .subscribe__left img {
-    width: 150px;
+@media screen and (max-width: 700px) {
+  .event__container {
+    margin: 0 auto;
+    -ms-grid-columns: 300px;
+        grid-template-columns: 300px;
+    -ms-grid-rows: (400px)[4];
+        grid-template-rows: repeat(4, 400px);
+        grid-template-areas: '300' 'dead' 'joker ' ' it';
   }
-  .subscribe__container .subscribe__right .sub__content {
-    font-size: 14px;
-  }
-  .subscribe__container .subscribe__right form {
-    width: 100%;
-  }
-  .subscribe__container button {
-    margin: 0rem auto;
+  .event__container .film {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
-/*# sourceMappingURL=eventSubStyle.css.map */
+
+@media screen and (max-width: 360px) {
+  .event__container {
+    padding: 1rem;
+    -ms-grid-columns: 260px;
+        grid-template-columns: 260px;
+  }
+}
+/*# sourceMappingURL=styleEvent.css.map */
